--- a/index.html
+++ b/index.html
@@ -19,7 +19,53 @@
 
   </head>
   <body>
-    <h1>Make Everything With React!</h1>
-    <!-- <script src="js/app.js"></script> -->
+
+    <section class="logo-section">
+      <img class="react-logo" src="img/react-logo.svg" alt="">
+      <h1>Build Native Apps With React</h1>
+      <nav>
+        <a href="#native">
+          Native iOS
+        </a>
+        <a href="#touch">
+          Touch Handling
+        </a>
+        <a href="#async">
+          Asynchronous
+        </a>
+        <a href="#flex">
+          Flex &amp; Styling
+        </a>
+      </nav>
+    </section>
+
+    <section id="native">
+      <div class="iphone-demo">
+        <img src="img/iphone-frame.svg" alt="">
+      </div>
+      <div class="feature-description">
+        <h2>Native Experience</h2>
+        <p>
+          Takes advantage of native iOS components to give y our app a consistant look and feel with the rest of the platform ecosystem, and keeps the quality bar high.
+        </p>
+      </div>
+    </section>
+
+    <section id="touch">
+      <div class="iphone-demo">
+        <img src="img/iphone-frame.svg" alt="">
+      </div>
+      <div class="feature-description">
+        <h2>Touches &amp; Gestures</h2>
+        <p>
+          React Native implements a powerful responder system to negotiate touches in complex view hierarchies. It allows you to build complex UI, and handle user interactions precisely.
+        </p>
+      </div>
+    </section>
+
+    <section>
+      <h1>Android Is Here</h1>
+    </section>
+
   </body>
 </html>
