fix some tricky typoe

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
 
-    <section class="logo-section">
+    <div class="section logo">
       <img class="react-logo" src="img/react-logo.svg" alt="">
       <h1>Build Native Apps With React</h1>
       <nav>
@@ -37,9 +37,9 @@
           Flex &amp; Styling
         </a>
       </nav>
-    </section>
+    </div>
 
-    <section id="native">
+    <div class="section" id="native">
       <div class="iphone-demo">
         <img src="img/iphone-frame.svg" alt="">
       </div>
@@ -49,9 +49,9 @@
           Takes advantage of native iOS components to give y our app a consistant look and feel with the rest of the platform ecosystem, and keeps the quality bar high.
         </p>
       </div>
-    </section>
+    </div>
 
-    <section id="touch">
+    <div class="section" id="touch">
       <div class="iphone-demo">
         <img src="img/iphone-frame.svg" alt="">
       </div>
@@ -61,11 +61,11 @@
           React Native implements a powerful responder system to negotiate touches in complex view hierarchies. It allows you to build complex UI, and handle user interactions precisely.
         </p>
       </div>
-    </section>
+    </div>
 
-    <section>
+    <div class="section">
       <h1>Android Is Here</h1>
-    </section>
+    </div>
 
   </body>
 </html>
