机智的又旋转又平移

--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
 
     <div class="section" id="android">
       <h1>Android Is Here</h1>
-      <div class="android-robot-wrapper">
-        <img src="img/android-robot.svg" alt="">
-      </div>
+      <img class="android-robot" src="img/android-robot.svg" alt="">
     </div>
 
     <div id="slider-control">
