oh fuck i should pull scripts out of node_modules -_-

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       </a>
     </div>
 
-    <script type="text/javascript" src="node_modules/gsap/src/uncompressed/TweenMax.js"></script>
-    <script type="text/javascript" src="node_modules/gsap/src/uncompressed/plugins/ScrollToPlugin.js"></script>
+    <script type="text/javascript" src="js/TweenMax.js"></script>
+    <script type="text/javascript" src="js/ScrollToPlugin.js"></script>
     <script type="text/javascript" src="js/scroll.js"></script>
   </body>
 </html>
