--- a/index.html
+++ b/index.html
@@ -37,27 +37,29 @@
           Flex &amp; Styling
         </a>
       </nav>
+      <div class="background"></div>
       <div class="overlay"></div>
     </div>
 
-    <div class="section" id="native">
+    <div id="iphone-overlay">
       <div class="iphone-demo">
         <img class="embed" src="img/tumblr-demo.jpg" alt="">
         <img src="img/iphone-frame.svg" alt="">
       </div>
+    </div>
+
+    <div class="section" id="native">
       <div class="feature-description">
         <h2>Native Experience</h2>
         <p>
-          Takes advantage of native iOS components to give y our app a consistant look and feel with the rest of the platform ecosystem, and keeps the quality bar high.
+          Takes advantage of native iOS components to give your app a consistant look and feel with the rest of the platform ecosystem, and keeps the quality bar high.
         </p>
       </div>
     </div>
 
     <div class="section" id="touch">
-      <div class="iphone-demo">
-        <img class="embed" src="img/swype-demo.jpg" alt="">
-        <img src="img/iphone-frame.svg" alt="">
-      </div>
+        <!--<img class="embed" src="img/swype-demo.jpg" alt="">
+        <img src="img/iphone-frame.svg" alt="">-->
       <div class="feature-description">
         <h2>Touches &amp; Gestures</h2>
         <p>
@@ -88,6 +90,9 @@
 
     <script type="text/javascript" src="js/TweenMax.js"></script>
     <script type="text/javascript" src="js/ScrollToPlugin.js"></script>
+    <script type="text/javascript" src="js/ScrollMagic.js"></script>
+    <script type="text/javascript" src="js/animation.gsap.js"></script>
+    <script type="text/javascript" src="js/debug.addIndicators.js"></script>
     <script type="text/javascript" src="js/scroll.js"></script>
   </body>
 </html>
